[gd_scene load_steps=2 format=3 uid="uid://dplqeht6kbmja"]

[ext_resource type="Script" uid="uid://c8f86p4if845a" path="res://scripts/game_over.gd" id="1_game_over_script"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_game_over_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3, 0.1, 0.1, 0.8)

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="MoneyLabel" type="Label" parent="StatsContainer"]
layout_mode = 2
text = "Money Earned: $0"
horizontal_alignment = 1

[node name="BulletsLabel" type="Label" parent="StatsContainer"]
layout_mode = 2
text = "Bullets Used: 0"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="StatsContainer"]
layout_mode = 2
text = "Play Time: 00:00"
horizontal_alignment = 1

[node name="KillsLabel" type="Label" parent="StatsContainer"]
layout_mode = 2
text = "Kills: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 104.0
offset_right = 100.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2
text = "RESTART"

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 171.0
offset_right = 100.0
offset_bottom = 221.0
grow_horizontal = 2
grow_vertical = 2
text = "MAIN MENU"
